Remove disabled attribute from submit button

--- a/tools/board-governance-assessment/frontend/index.html
+++ b/tools/board-governance-assessment/frontend/index.html
@@ -504,7 +504,7 @@
 
                 <!-- SUBMIT -->
                 <div class="form__group mt-xl">
-                    <button type="submit" id="submit-btn" class="btn btn--accent btn--large" disabled>
+                    <button type="submit" id="submit-btn" class="btn btn--accent btn--large" enabled>
                         Get My Governance Report
                     </button>
                     <p class="text-small text-muted text-center" style="margin-top: var(--space-md);">
