--- a/tools/board-governance-assessment/frontend/index.html
+++ b/tools/board-governance-assessment/frontend/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Assess your board's AI governance maturity in under 5 minutes. Designed for directors, board chairs, and executives with fiduciary responsibilities.">
     <title>AI Board Governance Diagnostic | GenerationAI</title>
-    <link rel="stylesheet" href="assets/css/brand.css">
+    <link rel="stylesheet" href="/assets/css/brand.css">
 </head>
 <body>
     <!-- NAVIGATION -->
@@ -526,6 +526,6 @@
         </div>
     </footer>
 
-    <script src="assets/js/form-handler.js"></script>
+    <script src="/assets/js/form-handler.js"></script>
 </body>
 </html>
