Trigger ROI Calculator deployment

--- a/tools/roi-calculator/frontend/index.html
+++ b/tools/roi-calculator/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Calculate your AI ROI in 2 minutes. See the real financial impact of automating document processing with AI - based on NZ research.">
+    <meta name="description" content="Calculate your AI ROI in 2 minutes. See the real financial impact of automating document processing with AI - based on 2025 NZ research.">
     <title>AI ROI Calculator | GenerationAI</title>
     <link rel="stylesheet" href="/assets/css/brand.css">
 </head>
