--- a/tools/business-readiness-assessment/frontend/results.html
+++ b/tools/business-readiness-assessment/frontend/results.html
@@ -94,19 +94,29 @@
             border-radius: var(--radius-lg);
             padding: var(--space-xl);
             margin-bottom: var(--space-xl);
+            page-break-inside: avoid;
+            break-inside: avoid;
         }
 
         .playbook-section h2 {
             text-align: center;
             margin-bottom: var(--space-md);
             color: var(--text-heading);
+            border-bottom: none;
+            padding-bottom: 0;
         }
 
         .playbook-pillars {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            grid-template-columns: repeat(2, 1fr);
             gap: var(--space-lg);
             margin: var(--space-xl) 0;
+        }
+
+        @media (max-width: 768px) {
+            .playbook-pillars {
+                grid-template-columns: 1fr;
+            }
         }
 
         .playbook-pillar {
@@ -203,9 +213,24 @@
             margin-bottom: var(--space-lg);
         }
 
+        /* Section headings (h2) - larger, with underline */
+        .section h2 {
+            font-size: var(--font-size-2xl);
+            font-weight: 700;
+            color: var(--text-heading);
+            border-bottom: 2px solid var(--primary-blue);
+            padding-bottom: var(--space-xs);
+            margin-bottom: var(--space-md);
+        }
+
+        /* Question headings (h3) - smaller, no underline */
         .feedback-item h3 {
             color: var(--text-heading);
             margin-bottom: var(--space-md);
+            font-size: var(--font-size-xl);
+            font-weight: 600;
+            border-bottom: none;
+            padding-bottom: 0;
         }
 
         .answer-playback {
