--- a/tools/business-readiness-assessment/frontend/results.html
+++ b/tools/business-readiness-assessment/frontend/results.html
@@ -128,6 +128,9 @@
             color: var(--primary-blue);
             margin-bottom: var(--space-sm);
             font-size: 1.25rem;
+            font-weight: 600;
+            border-bottom: none;
+            padding-bottom: 0;
         }
 
         .playbook-pillar p {
@@ -213,24 +216,26 @@
             margin-bottom: var(--space-lg);
         }
 
-        /* Section headings (h2) - larger, with underline */
+        /* Section headings (h2) - largest, with underline */
         .section h2 {
-            font-size: var(--font-size-2xl);
+            font-size: 2rem; /* 32px - largest */
             font-weight: 700;
             color: var(--text-heading);
             border-bottom: 2px solid var(--primary-blue);
             padding-bottom: var(--space-xs);
             margin-bottom: var(--space-md);
+            line-height: 1.2;
         }
 
-        /* Question headings (h3) - smaller, no underline */
+        /* Question headings (h3) - medium, no underline */
         .feedback-item h3 {
             color: var(--text-heading);
             margin-bottom: var(--space-md);
-            font-size: var(--font-size-xl);
+            font-size: 1.5rem; /* 24px - medium */
             font-weight: 600;
             border-bottom: none;
             padding-bottom: 0;
+            line-height: 1.3;
         }
 
         .answer-playback {
