Fix assessment page copy to accurately reflect deliverables
Updated 'What you'll receive' section:
- Removed: 'Shadow AI risk level' (not delivered separately)
- Removed: 'Governance exposure assessment' (vague, not accurate)
- Added: 'Detailed breakdown of 5 key readiness areas' (accurate)
- Updated: 'Prioritised action plan with recommendations' (more specific)

Now accurately describes what users actually receive:
- Business AI Readiness Score (0-100)
- Maturity band classification
- Detailed breakdown of 5 key readiness areas
- Prioritised action plan with recommendations

--- a/tools/business-readiness-assessment/frontend/index.html
+++ b/tools/business-readiness-assessment/frontend/index.html
@@ -31,7 +31,7 @@
             </p>
             <div class="alert alert--info">
                 <strong>What you'll receive:</strong> Your Business AI Readiness Score (0-100), maturity band classification,
-                Shadow AI risk level, governance exposure assessment, and a prioritised action plan, delivered to your inbox within 60 seconds.
+                detailed breakdown of 5 key readiness areas, and a prioritised action plan with recommendations, delivered to your inbox within 60 seconds.
             </div>
         </div>
     </section>
