Revert "Integrate HubSpot form with button link (mobile-friendly)"
This reverts commit 971f1862d6508041b99f207c768e3f3776ff41e5.

--- a/tools/business-readiness-assessment/frontend/index.html
+++ b/tools/business-readiness-assessment/frontend/index.html
@@ -430,26 +430,15 @@
 
                 <!-- SUBMIT -->
                 <div class="form__group mt-xl">
-                    <a href="https://7bboe8.share-ap1.hsforms.com/214JDII1nQGu3Vfxn_-IrYA" 
-                       target="_blank" 
-                       class="btn btn--accent btn--large" 
-                       style="display: inline-block; text-decoration: none;">
+                    <button type="submit" id="submit-btn" class="btn btn--accent btn--large" disabled>
                         Get My Readiness Report
-                    </a>
+                    </button>
                     <p class="text-small text-muted text-center" style="margin-top: var(--space-md);">
                         Your personalised report will be emailed to you within 60 seconds
                     </p>
                 </div>
 
             </form>
-            
-            <!-- Hidden HubSpot Form (for tracking/embedding purposes) -->
-            <div class="hs-form-frame" 
-                 data-region="ap1" 
-                 data-form-id="d7824320-8d67-406b-b755-fc67ffe22b60" 
-                 data-portal-id="442283840"
-                 style="display: none; visibility: hidden; height: 0; overflow: hidden;">
-            </div>
         </div>
     </section>
 
@@ -463,9 +452,6 @@
         </div>
     </footer>
 
-    <!-- HubSpot Forms Embed Script -->
-    <script src="https://js-ap1.hsforms.net/forms/embed/442283840.js" defer></script>
-    
     <script src="/assets/js/form-handler.js"></script>
 </body>
 </html>
